fix time element icons going out of circle containers on mobile

--- a/src/Components/Timeline/Timeline.scss
+++ b/src/Components/Timeline/Timeline.scss
@@ -92,10 +92,10 @@
     }
   
     .RoundIcon {
-      width: 30px;
-      height: 30px;
-      top: 40%;
-      left: 42%;
+      width: 25px;
+      height: 25px;
+      top: 50%;
+      left: 50%;
     }
   
     .TimelineElement  {
